// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 fp-Box fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</div>
`;

exports[`composition hook should return with Radio props 1`] = `
Object {
  "aria-describedby": "",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <Box
      className="css-1loxjy8 fp-RadioHiddenInput"
      id=""
      type="radio"
      use="input"
    />
    <Box
      className="css-1vmgcg0 fp-RadioIcon"
    />
  </React.Fragment>,
  "className": "css-z0gohc css-1pwrqjj css-1yuzjtp fp-Box fp-Radio",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Label fp-Radio"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-10 {
  color: #574feb !important;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 emotion-10 test fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`overrides Radio.HiddenInput.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-2 {
  background-color: #ff0000;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`overrides Radio.Icon.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-5 {
  background-color: #ff0000;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`overrides Radio.Label.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`overrides Radio.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-9 {
  background-color: #ff0000;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should assign a ref via radioRef 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<input
  class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
  id="radio"
  type="radio"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-RadioIcon {
  border-color: #da1717;
}

.emotion-2:not(:checked) + .fp-RadioIcon {
  box-shadow: #fbe8e8 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="true"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-RadioIcon {
  border-color: #0a7d33;
}

.emotion-2:not(:checked) + .fp-RadioIcon {
  box-shadow: #e7f2eb 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .fp-RadioIcon {
  border-color: #ed9c22;
}

.emotion-2:not(:checked) + .fp-RadioIcon {
  box-shadow: #fdf5e9 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-10 {
  background-color: #574feb !important;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 emotion-10 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    checked=""
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    checked=""
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    disabled=""
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  aria-required="true"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with label 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-13 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
  <span
    class="emotion-6 emotion-0 emotion-8 emotion-9 fp-RadioLabel fp-Box fp-Label"
    for="radio"
    id="label"
  >
    Hello world
  </span>
</label>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    name="checkboxRocks"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
    value="checkboxValue"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`theming Radio.HiddenInput.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-2 {
  background-color: #ff0000;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`theming Radio.Icon.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-5 {
  background-color: #ff0000;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`theming Radio.Label.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;

exports[`theming Radio.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: #fcfcfd;
  border: 1px solid #d9d9e1;
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .fp-RadioIcon {
  background-color: #f2f2f5;
  box-shadow: unset;
}

.emotion-2:focus + .fp-RadioIcon {
  border-color: #574feb;
  box-shadow: #cdcaf9 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .fp-RadioIcon {
  border-color: #574feb;
}

.emotion-2:checked + .fp-RadioIcon::before {
  background: #574feb;
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.5em;
}

.emotion-2[disabled]:checked + .fp-RadioIcon::before {
  border-color: #919aa9;
  background: #919aa9;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-9 {
  background-color: #ff0000;
}

<label
  aria-describedby="label"
  aria-invalid="false"
  class="emotion-6 emotion-0 emotion-1 emotion-9 fp-Box fp-Label fp-Radio"
>
  <input
    class="emotion-0 emotion-1 emotion-2 fp-RadioHiddenInput fp-Box"
    id="radio"
    type="radio"
  />
  <div
    class="emotion-0 emotion-1 emotion-5 fp-RadioIcon fp-Box"
  />
</label>
`;
